<resources>
    <string name="app_name" translatable="false">RDOKU</string>
    <string name="developer_name" translatable="false">kodama</string>
    <!-- Main Menu -->
    <string name="main_menu_logo" translatable="false">Rdoku</string>
    <string name="btn_new_game">New Game</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_hard">Hard</string>

    <!-- Game Mode Cards -->
    <string name="btn_play">Play</string>
    <string name="classic_9x9">Classic 9x9 sudoku</string>
    <string name="classic_6x6">Classic 6x6 sudoku</string>

    <!-- Sudoku Keyboard buttons-->
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>

    <!-- Game Menu Items -->
    <string name="game_menu_settings">Settings</string>
    <string name="game_menu_about">About</string>
    <string name="solve">Solve</string>

    <!-- ActionBar Game Menu Items -->
    <string name="action_menu_new_game">New game</string>

    <!-- Sudoku Complete Activity -->
    <string name="complete_congrats_faster">Congratulations 🎉 You\'ve completed %1$s sudoku only for %2$s:%3$s! It\'s even faster than your best - %4$s:%5$s 🔥</string>
    <string name="complete_congrats_slower">Congratulations 🎉 You\'ve completed %1$s sudoku only for %2$s:%3$s!  It\'s not faster than your best  - %4$s:%5$s, but still not bad ❤️</string>
    <string name="complete_congrats_first">Congratulations 🎉\nYou\'ve completed %1$s sudoku only for %2$s:%3$s!  It\'s was your first time 😍</string>
    <string name="complete_difficulty">Difficulty - %1$s</string>
    <string name="complete_time">Time - %1$s:%2$s</string>
    <string name="complete_best_time">Best - %1$s:%2$s</string>
    <string name="complete_detailed_stats">Detailed statistics:</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="appearance_header">Appearance</string>
    <string name="gameplay_header">Gameplay</string>

    <!-- Appearance Preferences -->
    <string name="app_theme_title">App theme</string>
    <string name="dark_mode_follow_system">Follow system</string>
    <string name="dark_mode_enable_dark">Enable dark mode</string>
    <string name="dark_mode_enable_light">Enable light mode</string>

    <!-- Gameplay Preferences -->
    <string name="enable_timer_header">Enable timer</string>
    <string name="highlight_identical_numbers_header">Highlight identical numbers</string>
    <string name="highlight_identical_numbers_summary">When you select a cell with a certain digit, the same digits are highlighted on the board</string>

    <!-- Buttons Preferences -->
    <string name="reset_easy_best">Reset best for easy difficulty</string>
    <string name="reset_moderate_best">Reset best for moderate difficulty</string>
    <string name="reset_hard_best">Reset best for hard difficulty</string>

    <string name="easy_reset_success">Best time for easy reset successfully</string>
    <string name="moderate_reset_success">Best time for moderate reset successfully</string>
    <string name="hard_reset_success">Best time for hard reset successfully</string>

    <!-- About -->
    <string name="game_rules_header">Rules</string>
    <string name="game_rules_text">\t1. Each 3×3 box can only contain each number from 1 to 9 once\n\t2. Each column and row can only contain each number from 1 to 9 once\n\tOnce the puzzle is solved, this means that every row, column, and 3×3 box will contain every number from 1 to 9 exactly once</string>
    <string name="about_header">About</string>
    <string name="about_text">This is the about text.\nI don\'t know what to write here, so that\'s it…\nBut there is my github</string>
    <string name="github_link_developer" translatable="false"><a href="https://github.com/ItsKajjo">GitHub</a></string>
    <string name="app_version_text">Version</string>

    <!-- Give up alert dialog -->
    <string name="give_up_alert_title">Do you want to give up?</string>
    <string name="give_up_alert_text">All cells will be filled with the correct numbers. But in order to win you will need to remove the number in any cell and put it back. This made in order that you can see the solution, otherwise it won\'t make sense</string>

    <!-- Stats Activity -->
    <string name="stats_title">Statistics</string>
    <string name="stats_overall_title">Overall</string>
    <string name="stats_best_time_title">Best time</string>
    <string name="stats_games_started">Games started</string>
    <string name="stats_games_completed">Games completed</string>
    <string name="stats_comp_rate">Completed%</string>
    <string name="stats_comp_rate_placeholder" translatable="false">%1$s%%</string>

    <!-- Stats reset alert dialog-->
    <string name="reset_stats_alert_title">Do you want to reset all stats?</string>
    <string name="reset_stats_alert_message">It will reset all your statistics! Do you really want to continue?</string>

    <!-- Stats menu items -->
    <string name="stats_menu_reset_all">Reset all</string>

    <!-- Some general stuff -->
    <string name="mmss_time_placeholder" translatable="false">%1$s:%2$s</string>
    <string name="no_best" translatable="false">--</string>

    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
</resources>