<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:title="@string/app_theme_title"
            app:key="app_theme"
            app:defaultValue="1"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_entry_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gameplay_header">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_timer"
            android:title="@string/enable_timer_header"/>

        <SwitchPreference
            app:title="@string/highlight_identical_numbers_header"
            app:defaultValue="true"
            android:key="highlight_identical_numbers"
            android:summary="@string/highlight_identical_numbers_summary"/>

        <SwitchPreference
            app:title="@string/highlight_mistakes_header"
            app:defaultValue="true"
            android:key="highlight_mistakes"
            android:summary="@string/highlight_mistakes_summary"/>
    </PreferenceCategory>
</PreferenceScreen>