<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp">
        <Button
            android:id="@+id/btnPrefResetEasy"
            android:text="@string/reset_easy_best"
            style="@style/Theme.RDOKU.ActionBar"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnPrefResetModerate"
            android:text="@string/reset_moderate_best"
            style="@style/Theme.RDOKU.ActionBar"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnPrefResetHard"
            android:text="@string/reset_hard_best"
            style="@style/Theme.RDOKU.ActionBar"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>