<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_constraint_overall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/stats_text_overall_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_overall_title"
            style="@style/statsCategoryTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/stats_card_overall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/stats_text_overall_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/card_top_color">
                <LinearLayout
                    android:id="@+id/stats_linear_layout_overall_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/stats_text_games_started_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            style="@style/statsItemsTitle"
                            android:text="@string/stats_games_started"/>

                        <TextView
                            android:id="@+id/stats_text_games_started_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/statsItemsTitle"
                            android:layout_alignParentEnd="true"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/divider_line_color"
                            android:layout_below="@id/stats_text_games_started_title" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/stats_text_games_completed_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            style="@style/statsItemsTitle"
                            android:text="@string/stats_games_completed"
                            android:layout_alignParentStart="true"/>
                        <TextView
                            android:id="@+id/stats_text_games_played_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            style="@style/statsItemsTitle"
                            android:layout_alignParentEnd="true"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/divider_line_color"
                            android:layout_below="@id/stats_text_games_completed_title" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/stats_text_comp_rate_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            style="@style/statsItemsTitle"
                            android:text="@string/stats_comp_rate"
                            android:layout_alignParentStart="true"/>

                        <TextView
                            android:id="@+id/stats_text_comp_rate_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            style="@style/statsItemsTitle"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/stats_text_best_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_best_time_title"
            style="@style/statsCategoryTitle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/stats_card_overall"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stats_rc_view_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_text_best_times"
            android:layout_marginTop="10dp">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>